# AI-Research-Assistant

./: .dockerignore  .env.example  .gitignore  API_KEYS_SETUP_GUIDE.md  AUTH_GUEST_USER_FIX.md  AUTO_FETCH_RAG_COMPLETE.md  CHAT_AND_GROUP_CHAT_ANALYSIS.md  DEBUG_USER_INFO_ERROR.md  Dockerfile.backend  Dockerfile.frontend  ENV_MIGRATION_NOTES.md  FINAL_FIX_SUMMARY.md  MIGRATION_PLAN.md  NGINX_README.md  PERMISSION_SETUP.md  RAG_IMPLEMENTATION_SUCCESS_FINAL.md  RAG_INTEGRATION_COMPLETE.md  RAG_INTEGRATION_COMPLETE_FINAL.md  RAG_INTEGRATION_IMPLEMENTATION_COMPLETE.md  RAG_INTEGRATION_STATUS.md  RAG_INTEGRATION_SUMMARY.md  RAG_UPLOAD_INSTRUCTIONS.md  README.md  REALTIME_GROUP_CHAT_IMPLEMENTATION.md  SESSION_MANAGEMENT_IMPLEMENTATION.md  apply_migration.js  apply_rag_fix.py  deploy-functions.sql  docker-compose.yml  enable_rag.py  enable_rag_all.py  enable_rag_all_sessions.sql  fix-docker-build.sh  func.json  nginx.conf  ngrok.yml  presentation.tex  pyproject.toml  q  quick-dns-fix.sh  (+19 more)
backend/: .dockerignore  .env.example  .gitignore  entrypoint.sh  pyproject.toml  start.sh
backend/app/: API_DOCUMENTATION.md  init_db.py  main.py
backend/app/core/: config.py
backend/app/db/: db.py  db_deprecated.py  models.py  models_deprecated.py  redis_client.py
backend/app/models/: __init__.py  chat.py  responses.py
backend/app/services/: ai_service.py  arxiv_service.py  background_tasks.py  chat_service.py  express_client.py  rag_service.py  (+1 more)
rag_backend/: API_DOCUMENTATION.md  analysis.ipynb  pyproject.toml  rag_module.py  temp.md
rag_backend/.github/: copilot-instructions.md
(+224 files in other folders)
