[project]
name = "ai-research-assistant-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain==0.2.16",
    "langchain-community==0.2.16",
    "langchain-google-genai==1.0.10",
    "langchain-groq==0.1.9",
    "langchain-cohere==0.1.9",
    "langchain-pinecone==0.1.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "arxiv>=2.1.0",
    "requests>=2.31.0",
    "httpx>=0.28.1",
    "pinecone-client==5.0.1",
    "pinecone-text==0.9.0",
    "tqdm>=4.66.0",
]
